fix(STN-443): remove extra spacing in pill lists

--- a/docroot/themes/humsci/humsci_basic/src/scss/utilities/_lists.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/utilities/_lists.scss
@@ -111,7 +111,7 @@
 .hb-pill-list {
   div:not([class]) > div:not([class]),
   &.label-hidden > div:not([class]),
-  li {
+  li:nth-child(n) {
     @include hb-pill($link: false);
   }
 }
